# Hello-Rust

./: Cargo.toml  index.html
src/: main  main.rs
static/: script.js  styles.css
